# shd-cli

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  braves-2026-blueprint.json  demo-blueprint.json  dist-workspace.toml  install.sh  test_e2e.py
.github/workflows/: release.yml
eval/: EVAL_GUIDE.md  eval_doc_build.py  eval_harness.py  live_mcp_build.py
npm/: .npmrc  install.js  package-lock.json  package.json
openapi/: v1.json
skills/coda-docs/: SKILL.md
skills/coda-pages/: SKILL.md
skills/coda-permissions/: SKILL.md
skills/coda-rows/: SKILL.md
skills/coda-shared/: SKILL.md
skills/coda-tables/: SKILL.md
skills/coda-tool-content/: SKILL.md
skills/coda-tool-tables/: SKILL.md
skills/fundamentals/: discover-tools.md  error-recovery.md  getting-started.md  sync-and-read.md
skills/recipe-build-doc/: SKILL.md
skills/recipe-create-tracker/: SKILL.md
skills/recipe-export-table/: SKILL.md
skills/recipe-sync-data/: SKILL.md
skills/workflows/: create-page-content.md  create-then-sync.md  read-and-write-rows.md  scaffold-doc.md  search-table.md  summarize-doc.md
src/: auth.rs  cell.rs  client.rs  error.rs  fuzzy.rs  lib.rs  main.rs  output.rs  paginate.rs  polish.rs  sanitize.rs  schema_cache.rs  slug.rs  tool_registry.rs  trace.rs  validate.rs
src/commands/: auth_cmd.rs  columns.rs  compound.rs  controls.rs  discover.rs  docs.rs  folders.rs  formulas.rs  mcp.rs  mod.rs  pages.rs  permissions.rs  resolve_url.rs  rows.rs  schema.rs  shell.rs  sync.rs  (+3 more)
tests/: compound_test.rs  integration_tests.rs  mock_smoke_test.rs  pick_test.rs
(+8 files in other folders)
